Markut SEO: Title ve Description

--- a/content/dergi/sayi-0/sayi-0-donald-norman.html
+++ b/content/dergi/sayi-0/sayi-0-donald-norman.html
@@ -1,7 +1,7 @@
 +++
 title = "Donald Norman ve Tasarım İlkeleri"
 url = "sayi-0/donald-norman/"
-description="Donald A. Norman, şirketlere insan merkezli tasarım yapabilmeleri için danışmanlık hizmeti veren Nielsen Norman Group’ un kurucu ortağıdır... araştırmaları doğrultusunda bu evrensel tasarım ilkelerini..."
+description="Donald A. Norman, şirketlere insan merkezli tasarım için danışmanlık hizmeti veren Nielsen Norman Group’un kurucu ortağıdır. Evrensel tasarım ilkelerini…"
 aciklama="Donald A. Norman, şirketlere insan merkezli tasarım yapabilmeleri için danışmanlık hizmeti veren Nielsen Norman Group’ un kurucu ortağıdır. Bilişsel bilim, bilgisayar bilimi ve psikoloji departmanlarında profesörlük geçmişi bulunmaktadır."
 type="sayfa"
 thumb="/img/donald-norman-thumbnail.jpg"
