--- a/content/dergi/sayi-0/sayi-0-ikoniksandalyeler.html
+++ b/content/dergi/sayi-0/sayi-0-ikoniksandalyeler.html
@@ -2,7 +2,7 @@
 title = "İkonik Tasarımlar: Sandalye"
 url = "sayi-0/ikonik-tasarimlar-sandalye/"
 seotitle = "İkonik Sandalye Tasarımları - 12 Sandalye Modeli"
-description="İkonik sandalyelerden 12 tanesine bu sayımızda yer verdik. Micheal Thonet tarafından 1859’da tasarlanan ve tanıtılan dünyanın ilk seri üretilen mobilya ürünüdür..."
+description="İkonik sandalyelerden 12 tanesine bu sayımızda yer verdik. Micheal Thonet tarafından 1859’da tasarlanan ve tanıtılan dünyanın ilk seri üretilen mobilyadır."
 aciklama="Kökeni, Antik Roma’da en etkili figürler tarafından kullanılan antik sella curulis'e (Antik Roma'da yüksek rütbeli politikacılar ve idari makam sahiplerinin iktidar ve güç sembolü olarak yorumlanan bir çeşit oturaktır.) dayanır."
 type="sayfa"
 thumb="/img/barcelona-chair-thumb.jpg"
