--- a/content/dergi/sayi-0/sayi-0-tasarimsozlugu.html
+++ b/content/dergi/sayi-0/sayi-0-tasarimsozlugu.html
@@ -2,7 +2,7 @@
 title = "Tasarım Sözlüğü: İkon"
 seotitle = "İkon Nedir? Tasarım Sözlüğünde İkonun Anlamı"
 url = "sayi-0/tasarim-sozlugu-ikon/"
-description="İKON, ya da İKONA (ing. İcon). Ortodoks kilise sanatında Hz. İsa, Meryem ya da azizleri betimleyen resim.  6.yy’da ortaya çıkmıştır. Önceleri Bizans'a özgü olan ikon..."
+description="İKON, ya da İKONA (ing. İcon). Ortodoks kilise sanatında Hz. İsa, Meryem ya da azizleri betimleyen resim. 6.yy’da ortaya çıkmıştır."
 aciklama="İKON, ya da İKONA (ing. İcon). Ortodoks kilise sanatında Hz. İsa, Meryem ya da azizleri betimleyen resim.  6.yy’da ortaya çıkmıştır. Önceleri Bizans'a özgü olan ikon, Ortodoks’lukla birlikte Balkanlar ve Rusya’da da yaygın bir kullanım ve uygulama alanı bulmuştur."
 type="sayfa"
 thumb="/img/ikon-kolaj-thumb.jpg"
