--- a/content/dergi/sayi-1/sayi-1-dijitalleşmenin-kullanıcı-deneyimi.html
+++ b/content/dergi/sayi-1/sayi-1-dijitalleşmenin-kullanıcı-deneyimi.html
@@ -6,7 +6,7 @@ aliases = [
 ]
 date = "2020-09-01"
 seotitle = "Dijitalleşmede Kullanıcı Deneyimi Tasarımı"
-description="Fizikselden dijitale geçişle birlikte kullanıcı deneyiminin (ux) üzerindeki etkileri. Kullanıcı deneyimi sağlama unsurları nelerdir? Kullanıcı Deneyimi algıları neler?"
+description="Fizikselden dijitale geçişle birlikte kullanıcı deneyiminin (ux) üzerindeki etkileri. İyi bir kullanıcı deneyimi nasıl sağlanır? Kullanıcı feneyiminde algılar."
 aciklama="Dijital teknolojideki sürekli gelişimin hayatımızın her alanına nüfuz ettiğini her gün daha net görüyoruz. Gündelik yaşantımızı, kullandığımız tüm bu makineler, ürünler ve sistemler olmadan hayal edebilmek artık mümkün değil."
 thumb="/img/dijitale-yolculuk-thumbnail.jpg"
 sayi=[
