--- a/content/dergi/sayi-1/sayi-1-rayların-üzerinde-raymond-loewy.html
+++ b/content/dergi/sayi-1/sayi-1-rayların-üzerinde-raymond-loewy.html
@@ -13,9 +13,7 @@ aciklama: 5 Kasım 1893’de Paris’te doğan Raymond Loewy, Amerika’da üret
    eserleri sayesinde Amerikalı tasarımcı olarak tanınmıştır. Tasarım anlayışında
    fonksiyon ön plandadır, form ve biçim daha sade ve geri plandadır.
 seotitle: Rayların Üzerinde Raymond Loewy
-description: Raymond Loewy, Amerika’da ürettiği eserleriyle Amerikalı tasarımcı
-   olarak tanınmıştır. S-1 Lokomtif tasarımıyla Loewy sonsuza kadar aerodinamik
-   (streamline) trenle özleşecek.
+description: Raymond Loewy, Amerika’da ürettiği eserleriyle tasarımcı olarak tanınmıştır. S-1 Lokomtif tasarımıyla sonsuza kadar aerodinamik (streamline) ile özleşecek.
 sayi:
    - '01'
 sayfa: '04'
