--- a/content/dergi/sayi-10/coca-cola/index.html
+++ b/content/dergi/sayi-10/coca-cola/index.html
@@ -1,6 +1,7 @@
 +++
 title = "İkonik Tasarımlar: Coca-Cola Şişesi"
-description=""
+seotitle="Coca-Cola Şişesi Tasarım Hikayesi ve Tarihi"
+description="Dünyada en fazla tanınan formlardan birisi Coca Cola şişesinin formudur. Elinize aldığınızda dahi tanıyabildiğimiz şişenin tasarım hikayesini okuyabilirsiniz."
 url="sayi-10/coca-cola-sise-tasarimi"
 aciklama="Dünyada en fazla tanınan formlardan birisi Coca Cola şişesinin formudur. Bu kola şişesini karanlıkta elimize aldığımızda veya şişenin kırık bir parçasına baktığımızda onun hangi ürüne ait olduğunu tanıyabiliyoruz."
 type="sayfa"
