--- a/content/dergi/sayi-10/mobilya-tasarimindaki-pop-art/index.html
+++ b/content/dergi/sayi-10/mobilya-tasarimindaki-pop-art/index.html
@@ -1,6 +1,7 @@
 +++
 title = "Mobilya Tasarımında Pop Art Etkisi"
-description=""
+seotitle="Mobilya Tasarımında Pop Art Etkisi"
+description="Pop Art sanat akımı, savaş sonrası dönemde gündelik hayata nüfus eden yeni tüketim kültürünü eleştirirken aynı zamanda bu kültüre ait ürünler çıkartmaktadır."
 url="sayi-10/mobilya-tasariminda-pop-art-etkisi"
 aciklama="İngiltere'de ortaya çıkmış ve başta Amerika olmak üzere tüm dünyayı etkisi altına almış olan Pop Art sanat akımı savaş sonrası dönemde gündelik hayata nüfus eden yeni tüketim kültürünü eleştirirken aynı zamanda bu kültüre ait ürünler çıkartan bir sanat akımıdır."
 type="sayfa"
