--- a/content/dergi/sayi-10/resolute-desk/index.html
+++ b/content/dergi/sayi-10/resolute-desk/index.html
@@ -1,6 +1,7 @@
 +++
 title = "ABD Başkanlık Masası: Resolute Desk"
-description=""
+seotitle="ABD Başkanlık Masası: Resolute Desk"
+description="The President's Desk veya The Resolute Desk olarak anılır. Tarihi, 1852'de İngiliz Savaş gemisi HMS Resolute ile başlar. ABD başkanlık masasının tarihi."
 url="sayi-10/abd-baskanlik-masasi-resolute-desk"
 aciklama="ABD başkanlarının ve ailelerinin Beyaz Saray'ı taşınma gününde yeniden dekore etmesi yaygın bir gelenektir. Bazıları milyon dolarlık tadilatlara başlarken, diğerleri yalnızca birkaç küçük değişiklik yapar. Ancak bireysel başkanlık tercihlerinden bağımsız olarak, asla değişmeyen bir şey vardır o da 'Resolute Desk'..."
 type="sayfa"
