--- a/content/dergi/sayi-10/yapim-tasarimi/index.html
+++ b/content/dergi/sayi-10/yapim-tasarimi/index.html
@@ -1,6 +1,7 @@
 +++
 title = "Yapım Tasarımı: Filmlerin Görsel Dili"
-description=""
+seotitle="Yapım Tasarımı: Filmlerin Görsel Dilinde Tasarımcı"
+description="Yapım tasarımcısı kimdir? Yapım tasarımcısı, setler için fikirler bulur ve bazı çizimler ve eskizler yapar. Filmlerin görsel dilini yapım tasarımı oluşturur."
 url="sayi-10/yapim-tasarimi-filmlerin-gorsel-dili"
 aciklama="Yapım tasarımcısı, setler için fikirler bulur ve bazı çizimler ve eskizler yapar. Yönetmenin bazı fikirleri olacağından, bizim durumumuzda George Lucas idi, kendisinin çalıştığı insanlar da birkaç eskizle çıkageldi. Setlerin nihai uygulaması yapım tasarımcısının sorumluluğundadır."
 type="sayfa"
