--- a/content/dergi/sayi-11/dustbuster/index.html
+++ b/content/dergi/sayi-11/dustbuster/index.html
@@ -1,6 +1,7 @@
 +++
 title = "İlk El Tipi Şarjlı Süpürge - DustBuster"
-description=""
+seotitle="İlk El Tipi Şarjlı Süpürge - DustBuster"
+description="El tipi şarjlı süpürgenin tasarım tarihi. İlk şarjlı süpürge Dustbuster. Dustbusterla başlayan kablosuz şarjlı süpürge günümüzde çılgınlık olarak devam ediyor."
 url="sayi-11/ilk-el-tipi-sarjli-supurge-dustbuster"
 aciklama="20 Temmuz 1969'da Neil Armstrong, Apollo Lunar Module Eagle'dan çıkıp ayın yüzeyine çıktı. Böyle olağanüstü bir başarıyı mümkün kılan hırslı ulusal çaba, aynı zamanda, Amerikalıların evlerine ve işyerlerine birçok yenilik soktu. Kuvarsla çalışan kol saatlerinden bina yalıtımına kadar, bugün kullandığımız birçok tüketici ürününün kökeni uzay yarışına dayanmaktadır. Yarışın içinde doğan küçük bir temizleme aracı ise büyük bir ticari başarı elde etti: Dustbuster®."
 type="sayfa"
