--- a/content/dergi/sayi-11/mackintosh/index.html
+++ b/content/dergi/sayi-11/mackintosh/index.html
@@ -1,6 +1,7 @@
 +++
 title = "Charles Rennie Mackintosh"
-description=""
+seotitle="Charles Rennie Mackintosh Hayatı ve Tasarımları"
+description="Charles Rennie Mackintosh, İskoçya'nın en ünlü mimarlarındandır. Grafik tasarım çalışmaları, onu Sembolizm ve Art Nouveau'nun temsilcilerinden biri yaptı."
 url="sayi-11/charles-rennie-mackintosh"
 aciklama="Charles Rennie Mackintosh, İskoçya'nın en ünlü mimarlarından biridir. Tasarladığı binalar modern hareketin önünü açtı. Mimari, onun ilk aşkıydı ancak aynı zamanda başarılı bir sanatçı, iç mimar, mobilya tasarımcısı, metal işçisi, vitray ve tekstil tasarımcısıydı. Ayrıca doğa ve organik bitki formlarını kullanarak yaptığı grafik tasarım çalışmaları, onu Sembolizm ve Art Nouveau'nun erken temsilcilerinden biri yaptı."
 type="sayfa"
