--- a/content/dergi/sayi-11/mini-ikonik-arabalar/index.html
+++ b/content/dergi/sayi-11/mini-ikonik-arabalar/index.html
@@ -1,7 +1,7 @@
 +++
 title = "İkonik Arabalar: Mini"
 seotitle="İkonik Arabalar: Mini Tarihi"
-description=""
+description="Mini bir arabadan ne beklerseniz size fazlasını sunmaktadır. Mini Model 1 ve Cooper ikonik araçları, Mini'nin kuruluşu ve tasarımcısı Alec Issigonis sayımızda."
 url="sayi-11/ikonik-arabalar-mini"
 aciklama="Mini bir İngiliz otomobili dendiği zaman akla gelen ilk otomobillerdendir. Mini bir otomobilden ne beklerseniz size fazlasını sunmaktadır. Mini, şehir yaşantısında dar sokaklardan bir gokart kullanırmışçasına eğlenceli bir kullanım sunarken aynı zamanda yıllardır ufak dokunuşlarla değişen ikonik tasarımıyla gözlerin üzerinizde olduğunu size hissettirir."
 type="sayfa"
