--- a/content/dergi/sayi-11/tasarimda-prototip/index.html
+++ b/content/dergi/sayi-11/tasarimda-prototip/index.html
@@ -1,7 +1,7 @@
 +++
 title = "Tasarım Sözlüğü: Prototip"
 seotitle="Tasarımda Prototip Nedir? Prototip Süreci"
-description=""
+description="Prototip; ilk örnek, model anlamındadır. Tasarım sürecinde prototip oluşturmak; ürünün özelliklerini keşfetmek, tasarım konseptini görmek adına yapılır."
 url="sayi-11/prototip-nedir"
 aciklama="Prototip sözcüğüne Türkçede karşılık gelen anlam, ilk örnek, modeldir. İngilizce prototype olan bu kelimenin İngilizce sözlükte açıklaması, 'Ürün, ticari olarak üretilmeden önce gerektiğinde tasarımının değiştirilebilmesi için test edilen bir üründen üretilen ilk birimlerden biri.' Tasarım sürecinde prototip oluşturmak; ürünün özelliklerini keşfetmek, tasarım konseptini görmek, iyi anlamak ve aktarmak, üründen geri bildirim almak ve ürünü geliştirmek için oluşturulan gerçekçi bir taslaktır."
 type="sayfa"
