--- a/content/dergi/sayi-2/sayi-2-biyomimikri.html
+++ b/content/dergi/sayi-2/sayi-2-biyomimikri.html
@@ -3,7 +3,7 @@ title = "Tasarımda Doğanın Bilgisinden Yararlanmak: Biyomimikri"
 url = "sayi-2/biyomimikri-nedir-tasarimda-dogadan-yararlanmak/"
 date = "2020-10-01"
 seotitle = "Biyomimikri: Tasarımda Doğadan Yararlanmak"
-description="Biyomimetik veya biyomimikri, karmaşık insan problemlerini çözmek amacıyla doğanın modellerinin, sistemlerinin ve öğelerinin öykünümüdür."
+description="Biyomimetik veya biyomimikri, insan problemlerini çözmek amacıyla doğanın modellerinin, sistemlerinin öykünümüdür. Tasarım ve mimarlıktaki örnekleri sayımızda."
 aciklama="Biyomimetik veya biyomimikri, karmaşık insan problemlerini çözmek amacıyla doğanın modellerinin, sistemlerinin ve öğelerinin öykünümüdür. Endüstri Devrimi'nden farklı olarak Biyomimikri Devrimi, doğadan ne çıkarabileceğimize değil, ondan öğrenmenin mümkün olduğuna dayanan bir çağ sunuyor."
 thumb="/img/thumb-biyomimikri.jpg"
 sayi=[
