--- a/content/dergi/sayi-2/sayi-2-ikonik-masa-lamba.html
+++ b/content/dergi/sayi-2/sayi-2-ikonik-masa-lamba.html
@@ -2,7 +2,7 @@
 title = "İkonik Masa Lambası Tasarımları"
 url = "sayi-2/ikonik-masa-lambasi-tasarimlari/"
 date = "2020-10-01"
-seotitle = "İkonik Masa Lambası Tasarımları"
+seotitle = "İkonik Masa Lambası Tasarımları - 9 İkonik Model"
 description="Ünlü ve ikonik hale gelen masa lambası tasarımları. 9 İkonik Masa Lambası. Masa lambaları bir ruh hali veya atmosfer yaratmada harika araçlardır."
 aciklama="Masa lambaları bir ruh hali veya atmosfer yaratmada harika araçlardır. Nitekim bu aksesuarlar işlevselliklerinin yanı sıra yüksek bir dekoratif potansiyele sahiptir. Günümüze kadar özgün ve zamanla klasikleşen yüzlerce masa lambası tasarlandı. Bu yazıda bu tasarımlardan 9 tanesinden bahsedeceğiz."
 thumb="/img/thumb-ikonik-masa-lambalari.jpg"
