--- a/content/dergi/sayi-2/sayi-2-iskandinav-tasarimina-bakis.html
+++ b/content/dergi/sayi-2/sayi-2-iskandinav-tasarimina-bakis.html
@@ -2,7 +2,7 @@
 title = "İskandinav Tasarımına Bakış"
 url = "sayi-2/iskandinav-tasarimi/"
 date = "2020-10-01"
-seotitle = "İskandinav Tasarımına Bakış"
+seotitle = "İskandinav Tasarımı Anlayışı, Temeli ve Öncüleri"
 description="İskandinav tasarımı nedir? Öncüleri kimlerdir? 20. yüzyılın başlarında ortaya çıkan ve daha sonra 1950’lerde İskandinav ülkelerinde gelişen tasarım hareketidir."
 aciklama="İskandinav tasarımı, 20. yüzyılın başlarında ortaya çıkan ve daha sonra 1950’lerde beş İskandinav ülkesinde gelişen yalınlık, minimalizm ve işlevsellik ile karakterize edilen bir tasarım hareketidir."
 thumb="/img/thumb-iskandinav-tasarimi.jpg"
