--- a/content/dergi/sayi-2/sayi-2-tipografi-tasarim-sozlugu.html
+++ b/content/dergi/sayi-2/sayi-2-tipografi-tasarim-sozlugu.html
@@ -2,7 +2,7 @@
 title = "Tasarım Sözlüğü: Tipografi"
 url = "sayi-2/tasarimda-tipografi-nedir/"
 date = "2020-10-01"
-seotitle = "Tipografi Nedir? Tasarımda Tipografi"
+seotitle = "Tipografi Nedir? Tasarımda Tipografinin Doğru Kullanımı"
 description="Tipografi: Yunanca, týpos (form) + graphia (yazmak) sözcüklerinin birleşmesi ile oluşur. Form, en uygun biçimin almasıdır. Tipografi, yani yazı formu-biçimi."
 aciklama="Tipografi: Yunanca, týpos (form) + graphia (yazmak) sözcüklerinin birleşmesi ile oluşur. Form, en uygun biçimin almasıdır. Tipografi, yani yazı formu-biçimi olarak çevirdiğimizde ise yazının, kullanılacağı yere göre en uygun şekilde yerleştirilmesi, düzenlenmesidir."
 thumb="/img/thumb-tipografi.jpg"
