--- a/content/dergi/sayi-3/sayi-3-bauhaus-ekolu.html
+++ b/content/dergi/sayi-3/sayi-3-bauhaus-ekolu.html
@@ -2,8 +2,8 @@
 title = "Bauhaus Ekolüne Bakış"
 url = "sayi-3/bauhaus-tasarim-okulu-ekolu/"
 date = "2020-11-01"
-seotitle = "Bauhaus Tasarım Okulu, Ekolü"
-description="Bauhaus ekolü nedir? Bauhaus ve endüstriyel tasarım. Bauhaus akımının etkileri. Yanlızca bir fikrin böyle bir etki yapma gücü vardır ki, geniş yankılar uyandırabilsin..."
+seotitle = "Bauhaus Tasarım Okulu Kuruluşu - Bauhaus Ekolü"
+description="Bauhaus ekolü nedir? Bauhaus ve endüstriyel tasarım. Bauhaus akımının etkileri. Yanlızca bir fikrin böyle bir etki yapma gücü vardır ki, geniş yankılar..."
 aciklama="Bauhaus bir fikirdi. Onun dünyadaki tüm ilerici okullar üzerindeki büyük etkisinin temelinde, onun bir fikir olma gerçeğinde yatmaktadır. Böyle bir etkiye ne bir organizasyonla, ne de propagandayla ulaşılabilir. Yanlızca bir fikrin böyle bir etki yapma gücü vardır ki, geniş yankılar uyandırabilsin."
 thumb="/img/bauhaus-markut.jpg"
 sayi=[
