--- a/content/dergi/sayi-3/sayi-3-ikonik-kettle.html
+++ b/content/dergi/sayi-3/sayi-3-ikonik-kettle.html
@@ -3,7 +3,7 @@ title = "İkonik Tasarımlar: Çaydanlık ve Su Isıtıcısı"
 url = "sayi-3/ikonik-tasarimlar-kettle-caydanlik-isitici/"
 date = "2020-11-01"
 seotitle = "İkonik Tasarımlar: Çaydanlık ve Su Isıtıcısı"
-description="Bu sayımızda ikonik kettle, çaydanlık ve su ısıtıcalarına değindik. En bilinen ve ünlü kettle tasarımlarını derledik. Sizin için bir su ısıtıcısı tasarlayacağım."
+description="Sayımızda ikonik kettle, çaydanlık ve su ısıtıcalarına değindik. En bilinen ve ünlü kettle tasarımlarını derledik. Sizin için bir su ısıtıcısı tasarlayacağım."
 aciklama="Sizin için bir su ısıtıcısı tasarlayacağım, ancak benim için sadece güzel bir su ısıtıcısı tasarlamak yeterli değil. Çok yönlü olabilen bir su ısıtıcısı tasarlamak istiyorum. Sadece gözlere değil kulaklara da."
 thumb="/img/ikonik-caydanliklar-markut.jpg"
 sayi=[
