--- a/content/dergi/sayi-3/sayi-3-kitchenaid.html
+++ b/content/dergi/sayi-3/sayi-3-kitchenaid.html
@@ -2,7 +2,7 @@
 title = "Yüzyılı Karıştıran: KitchenAid Mikser"
 url = "sayi-3/kitchenaid-mikser-tasarimi-egmont-arens/"
 date = "2020-11-01"
-seotitle = "Yüzyılı Karıştıran: KitchenAid Mikser"
+seotitle = "Yüzyılı Karıştıran: KitchenAid Mikser Tasarım Tarihi"
 description="İlk mikser 1919'da tanıtıldı, ancak tüketicileri gerçekten büyüleyen Arens'in 1937 Model K tasarımıydı. Kitchenaid tasarımı, hikayesi ve tasarımcısı."
 aciklama="Rivayete göre, bir ev modeli piyasaya sürüldüğünde, Johnston’ın eşi onu test etti ve şöyle dedi: 'ne diye adlandırdığınız önemli değil, bu şimdiye kadar gördüğüm en iyi mutfak yardımcısı.' (kitchen aid)Efsanevi şirketin adı doğdu: KitchenAid."
 thumb="/img/kitchenaid-mixer-thumbnail.jpg"
