--- a/content/dergi/sayi-4/sayi-4-3d-yazici.html
+++ b/content/dergi/sayi-4/sayi-4-3d-yazici.html
@@ -6,7 +6,7 @@ aliases = [
 ]
 date = "2020-12-01"
 seotitle = "3 Boyutlu Yazıcılar ve Endüstriyel Tasarım"
-description=""
+description="3B baskı sürecini, 3B yazıcı çeşitlerini, malzemelerini detaylandırıp, 3B baskı için endüstriyel tasarım yapılırken dikkat edilmesi gereken yerlere değineceğim."
 aciklama="Bir önceki sayıda 3B yazıcılara tarihi, çeşitleri, malzemeleri ve uygulamalarna bir giriş yapmıştık. Bu sayıda ise 3B baskı sürecini, 3B yazıcı çeşitlerini, malzemelerini detaylandırıp, 3B baskı için tasarım yapılırken dikkat edilmesi gereken yerlere değineceğim."
 thumb="/img/3-boyutlu-yazicilar-endustriyel-tasarim-thumb.jpg"
 sayi=[
