--- a/content/dergi/sayi-4/sayi-4-bauhaus-turkiye.html
+++ b/content/dergi/sayi-4/sayi-4-bauhaus-turkiye.html
@@ -5,8 +5,8 @@ aliases = [
     "/sayi-4/turkiye-den-bauhaus-cikar-mi/"
 ]
 date = "2020-12-01"
-seotitle = "Türkiye'den Bauhaus Çıkar mı?"
-description=""
+seotitle = "Türkiye’den Bauhaus Çıkar mı? Bauhaus Ekolü Üzerine"
+description="Kısa dönemde tasarım dünyasını etkisini alan Bauhaus'un, tüm dünyada olduğu gibi Türkiye'de de etkilerini görmek mümkün. Bauhaus ekolü ve Türkiye..."
 aciklama="Kısa dönemde tasarım dünyasını etkisini alan Bauhaus'un, tüm dünyada olduğu gibi Türkiye'de de etkilerini görmek mümkün. Nazilerin Almanya'da iktidara gelmesiyle birlikte ülkesini terk etmek zorunda kalan Alman öğretmenler, Türkiye'de eğitime önemli katkılarda bulundular. Peki Türkiye'de böyle bir hareket mümkün mü? Olabilir mi?"
 thumb="/img/bauhaus-turkiye-thumbnail.jpg"
 sayi=[
