--- a/content/dergi/sayi-4/sayi-4-ergonomi.html
+++ b/content/dergi/sayi-4/sayi-4-ergonomi.html
@@ -6,7 +6,7 @@ aliases = [
 ]
 date = "2020-12-01"
 seotitle = "Tasarımda Ergonomi Nedir?"
-description=""
+description="Ergonomi, insanlar ve bir sistemin unsurları arasındaki etkileşimlerin anlaşılmasıyla ilgili bilimsel disiplindir. Ergonominin tarihi, ergonomik ürünler..."
 aciklama="Ergonomi, insanlar ve bir sistemin diğer unsurları arasındaki etkileşimlerin anlaşılmasıyla ilgili bilimsel disiplindir. Çalışmanın yöntemli bir şekilde düzenlenmesi ve hem makinelerin hem de donanımın çalışan insan yatkınlıklarına göre hesaplanması amacıyla yapılan inceleme ve araştırmaları kapsar."
 thumb="/img/tasarimda-ergonomi-nedir.jpg"
 sayi=[
@@ -25,7 +25,7 @@ tags= [
 <div class="text-center">
 <img loading="lazy" class="slb" src="/img/ergonomi-nedir.gif" alt="">
 </div>
-<h1>Ergonomi Nedir?</h1>
+<h2>Ergonomi Nedir?</h2>
 <div class="row">
     <div class="col-md-5"><p>Ergonomi kelimesi "iş bilimi" Yunanca ergon (iş) ve nomos'tan (yasalar) türetilmiştir.</p>
         <p><em>Ergonomi</em> ve <em>insan faktörleri</em> genellikle birbirinin yerine ya da bir birim olarak kullanılmaktadır.<em> (Örneğin, insan faktörleri / ergonomi - HF / E veya E / HF) </em>EUA (Avrupa Üniversiteler Birliği)'nın kabul ettiği bir ifade biçimidir.</p>
