--- a/content/dergi/sayi-4/sayi-4-kontrplak.html
+++ b/content/dergi/sayi-4/sayi-4-kontrplak.html
@@ -2,8 +2,8 @@
 title = "Tasarımda Malzeme: Kontrplak"
 url = "sayi-4/tasarimda-malzeme-kontrplak"
 date = "2020-12-01"
-seotitle = "Tasarımda Malzeme: Kontrplak"
-description=""
+seotitle = "Tasarımda Kontrplak Malzeme - Üretimi ve Kullanımı"
+description="Kontrplak, 30'lu yılların klasik mobilya tasarımlarından, benzersiz tasarımlar üretmeyi sağlıyor. Üretimi, tasarımcıları ve örnekleri sayımızda."
 aciklama="Kontrplak kısaca, huş, kayın, kavak gibi ağaçların kütük haline getirilmesi, akabinde bunların düzgün olanlarının seçilip soyularak belirli ebatlar da katmanlı olarak panel haline getirilmesidir. Kontrplak mobilya alanında, oluşturacağınız ürünlerin niteliğine göre ağaç cinsi tercihi değişmektedir. Koltuk, raf, masa, ofis mobilyaları gibi ürünlerde filmsiz kontrplak sıklıkla kullanılır."
 thumb="/img/tasarimda-malzeme-kontrplak.jpg"
 sayi=[
@@ -87,7 +87,7 @@ tags= [
 </div>
 
 <hr>
-<h1><strong>Stefan Diez</strong></h1>
+<h2>Stefan Diez</h2>
 <div class="row">
     <div class="col-md-5"><p>Yeteneklerini keşfetmek için çeşitli malzemeler kullanan bir başka üretken tasarımcı olan Diez, sergilerinde ve ürün tasarımlarında sık sık bükülmüş kontrplak ile çalışıyor. Kontrplağın inanılmaz çok yönlülüğünden yararlanarak, malzemeye geometrik bir duyarlılık katarken, malzemenin neredeyse her şekle girebilme yeteneği sayesinde ışığını ve oyunculuğunu koruyor.</p>
     </div>
@@ -95,7 +95,7 @@ tags= [
 </div>
 
 <hr>
-<h1><strong>Ronan ve Erwan Bouroullec</strong></h1>
+<h2>Ronan ve Erwan Bouroullec</h2>
 <div class="row">
     <div class="col-md-5"><p>Fransız tasarımcılar (ve kardeşler) Ronan ve Erwan, ilgi çekici tasarımları ile ünlendiler ve kontrplakla yaptıkları çalışmalarla farklı bir yorum katıyorlar. HAY ve Matiazzi ile yaptıkları işbirlikleri, kaplamalı ahşap ile tasarım yapma becerilerinin altını çiziyor. Çalışmaları sadece kontrplağın modern, arzu edilen bir tasarım malzemesi olarak konumunu güzelliğini, dayanıklılığını ve uyarlanabilirliğini vurgulayan heyecan verici çeşitlilikteki bir uygulama yelpazesiyle sağlamlaştırıyor.</p>
     </div>
@@ -157,7 +157,7 @@ tags= [
 </div>
 
 
-<p>Böylece kontrplak, 30'lu yılların klasik mobilya tasarımlarından, ömür boyu sürecek benzersiz tasarım parçaları elde etmek için saniyeler içinde kişiselleştirmeye izin veren teknolojiyle; yeni v heyecan verici bir çok şeye olanak sağlıyor. Bu malzeme geçmişte olduğu gibi gelecekte de yeri olduğunu kanıtlıyor ve tasarım tarihindeki yeri için övgüye değer. </p>
+<p>Böylece kontrplak, 30'lu yılların klasik mobilya tasarımlarından, ömür boyu sürecek benzersiz tasarım parçaları elde etmek için saniyeler içinde kişiselleştirmeye izin veren teknolojiyle; yeni ve heyecan verici bir çok şeye olanak sağlıyor. Bu malzeme geçmişte olduğu gibi gelecekte de yeri olduğunu kanıtlıyor ve tasarım tarihindeki yeri için övgüye değer. </p>
 
 <br><br>
 <button
