--- a/content/dergi/sayi-4/sayi-4-muzik-aletleri.html
+++ b/content/dergi/sayi-4/sayi-4-muzik-aletleri.html
@@ -3,7 +3,7 @@ title = "İkonik Tasarımlar: Taşınabilir Müzik Cihazları"
 url = "sayi-4/ikonik-tasarimlar-tasinabilir-muzik-cihazlari"
 date = "2020-12-01"
 seotitle = "İkonik Tasarımlar: Taşınabilir Müzik Cihazları"
-description=""
+description="Taşınabilir müzik aletlerinin başlangıcı olan Walkman'in tasarım hikayesi, Apple iPod, iPod Suffle ve dijital müzik platformlara geçiş yeni sayımızda sizlerle."
 aciklama="Müzik bir sahne sanatıdır ve temel formatı canlı sergilenmesidir. Fakat teknolojinin gelişmesiyle müzik sıkıştırılabilir, kopyalanabilir bir hale gelmeye başladı. İlk basılan taş plaklar beraberinde yeni bir sektörü de canlandırmaya başladı; müzik sektörü. Müziğin kopyalanıp satışa sunulmasıyla gittikçe artan kayıt şirketleri yeni sesler ve isimler aramaya ve onları pazarlamaya başladı."
 thumb="/img/tasinabilir-muzik-cihazlari-thumb.jpg"
 sayi=[
