--- a/content/dergi/sayi-4/sayi-4-olafur.html
+++ b/content/dergi/sayi-4/sayi-4-olafur.html
@@ -3,7 +3,7 @@ title = "Sanatın Tasarımı: Olafur Eliasson"
 url = "sayi-4/sanatin-tasarimi-olafur-eliasson"
 date = "2020-12-01"
 seotitle = "Sanatın Tasarımı: Olafur Eliasson"
-description=""
+description="Olafur Eliasson, izleyicinin deneyimi için ışık, su ve sıcaklık gibi etmenlerle; heykel ve enstalasyon çalışmaları yapan sanatçı, mimar ve tasarımcıdır."
 aciklama="\"Gerçeklik; yaptığımız, gördüğümüz, hissettiğimiz ve düşündüğümüz şeylerdir.\" Olafur Eliasson 1967 doğumlu, izleyicinin deneyimini geliştirmek için ışık, su ve sıcaklık gibi temel etmenleri kullanan; heykel ve büyük ölçekli enstalasyon sanatı ile tanınan Danimarkalı- İzlandalı sanatçı, mimar ve tasarımcı."
 thumb="/img/sanatin-tasarimi-olafur-eliasson-thumbnail.jpg"
 sayi=[
