--- a/content/dergi/sayi-4/sayi-4-streamline-raymond.html
+++ b/content/dergi/sayi-4/sayi-4-streamline-raymond.html
@@ -3,7 +3,7 @@ title = "Streamline Akımı ve Raymond Loewy"
 url = "sayi-4/streamline-akimi-raymond-loewy/"
 date = "2020-12-01"
 seotitle = "Streamline Akımı ve Raymond Loewy"
-description=""
+description="Streamline'ı; terim anlamı olarak 'akış çizgisi, akışkan çizgiler' tamlamaları kullanılan, ana temasının hız, ana çizgisinin bir damla formundan oluşan akımdır."
 aciklama="Streamline'ı; terim anlamı olarak ''akış çizgisi, akışkan çizgiler'' tamlamaları kullanılan, ana temasının hız, ana çizgisinin bir damla formunun oluşturduğu, etrafımızda örneklerine sık sık rastladığımız bir akım olarak tanımlayabiliriz."
 thumb="/img/raymond-lowey-streamline.jpg"
 sayi=[
