--- a/content/dergi/sayi-5/3d-yazicilar/index.html
+++ b/content/dergi/sayi-5/3d-yazicilar/index.html
@@ -1,6 +1,6 @@
 +++
 title = "3 Boyutlu Yazıcılar ve Üretim"
-description=""
+description="3 Boyutlu yazıcılar endüstriyel üretimde kullanılır mı? 3D yazıcılar neden ve nasıl kullanılır? Artıları ve eksileri nelerdir? Tüm bilgiler yeni sayımızda."
 url="sayi-5/3b-yazicilar-ve-uretim"
 aciklama="Bir önceki sayıda 3B yazım sürecine; detaylıca makine türlerine ve malzemelerine; tasarımcılar olarak 3B baskıya uygun ve doğru ürünler elde edebilmek için tasarım aşamasında dikkat edilmesi gereken hususlara değinmiştik. Bu sayıda ise 3B yazıcıların endüstriyel üretimde neden ve nasıl kullanıldığına/kullanılmadığına değineceğiz."
 type="sayfa"
