--- a/content/dergi/sayi-5/beyin-firtinasi/index.html
+++ b/content/dergi/sayi-5/beyin-firtinasi/index.html
@@ -1,6 +1,7 @@
 +++
 title = "Tasarım Sözlüğü: Beyin Fırtınası"
-description=""
+seotitle="Beyin Fırtınası Nedir? Nasıl Yapılır?"
+description="Beyin fırtınası, belirlenen konu -sorun- üzerinde birey(ler)in çeşitli fikirler üreterek çözümler bulmasını sağlayan yaratıcı düşünme yöntemidir."
 url="sayi-5/beyin-firtinasi-nedir"
 aciklama="Beyin fırtınası, belirlenen konu -sorun- üzerinde birey(ler)in çeşitli fikirler üreterek çözümler bulmasını sağlayan yaratıcı düşünme yöntemidir."
 type="sayfa"
