--- a/content/dergi/sayi-5/ikonik-tasarimlar-lego/index.html
+++ b/content/dergi/sayi-5/ikonik-tasarimlar-lego/index.html
@@ -1,6 +1,7 @@
 +++
 title = "İkonik Tasarımlar: Lego"
-description=""
+seotitle="Lego Tarihi - Kuruluşu ve Tasarımları"
+description="LEGO, nesiller boyunca dünyada ve anne babaların ayaklarında iz bıraktı. Sayımızda, Lego'nun kuruluş hikayesini, gelişimini ve ürünlerini okuyacaksınız."
 url="sayi-5/ikonik-tasarimlar-lego"
 aciklama="LEGO®, nesiller boyunca dünyada ve anne babaların ayaklarında iz bıraktı. Danimarka taşralarından dünyanın en büyük oyuncak şirketine. Her şey tek bir LEGO tuğlası ile başladı. LEGO tuğlalarını bu kadar özel kılan şey potansiyeli kadar yaratılış hikayesidir aynı zamanda."
 type="sayfa"
