--- a/content/dergi/sayi-5/jukebox/index.html
+++ b/content/dergi/sayi-5/jukebox/index.html
@@ -1,6 +1,7 @@
 +++
 title = "Jukebox - Müzik Kutusu"
-description=""
+seotitle="Jukebox - Müzik Kutusu Tasarımı ve Tarihi"
+description="Bir zamanlar, Amerikan toplumunda müzik zevkinin nabzını tutan Jukebox. Musikbox. Her şeyden önce ürünün ismi müzik kutusu değildi. Sayımızdan okuyabilirsiniz."
 url="sayi-5/jukebox-muzik-kutusu"
 aciklama="Her şeyden önce ürünün ismi müzik kutusu değildi. -Altın çağlarında- jetonla çalışan fonograflar* olarak biliniyordu. En iyi mekanlarda bulunan fonograflar milyonlarca dolarlık iş yaptı. Kadrosuna; parlak tasarımcılar, milyoner senatörler ve hatta gangsterler de dahildi."
 type="sayfa"
@@ -18,21 +19,19 @@ tags= ["anasayfa", "dergi"]
          <p>
             <strong>
                Bir zamanlar, Amerikan toplumunda müzik zevkinin nabzını tutan
-               Jukebox.. Musikbox..
+               Jukebox... Musikbox...
             </strong>
          </p>
          <p>
-            Her şeyden önce ürünün ismi müzik kutusu değildi. -Altın çağlarında-
-            <em>jetonla çalışan fonograflar*</em>
-            olarak biliniyordu. En iyi mekanlarda bulunan fonograflar
+            Her şeyden önce ürünün ismi müzik kutusu değildi. -Altın çağlarında- <em>jetonla çalışan fonograflar*</em> olarak biliniyordu. En iyi mekanlarda bulunan fonograflar
             milyonlarca dolarlık iş yaptı. Kadrosuna; parlak tasarımcılar,
             milyoner senatörler ve hatta gangsterler de dahildi.
          </p>
          <p>
             Zamanında elektro-mekaniğin sınırlarını zorlayan en son
             teknolojisiyle
-            <em>&#x27;Hi-fi&#x27;*</em>
-            nin başlangıcı oldu.
+            <em>Hi-fi&#x27;nin**</em>
+             başlangıcı oldu.
          </p>
          <p>
             Amerikan radyo ve tv müzik programı olan &#x27;Your Hit Parade&#x27;
@@ -40,9 +39,7 @@ tags= ["anasayfa", "dergi"]
          </p>
          <blockquote>
             &quot;Nota ve fonograf kayıtlarında en çok satan, havada en çok
-            duyulan ve 
-            <strong>otomatik jeton makinelerinde</strong>
-             en çok çalınan şarkılar, Amerika&#x27;nın popüler müzik zevkinin
+            duyulan ve <strong>otomatik jeton makinelerinde</strong> en çok çalınan şarkılar, Amerika&#x27;nın popüler müzik zevkinin
             otantik bir doğru çizelgesidir.&quot; dedi.
          </blockquote>
          <p></p>
@@ -54,7 +51,7 @@ tags= ["anasayfa", "dergi"]
          </p>
          <p>
             <em>
-               *Hi-fi: İngilizce &quot;High Fidelity&quot; kelimelerinin ilk iki
+               **Hi-fi: İngilizce &quot;High Fidelity&quot; kelimelerinin ilk iki
                harflerinden oluşturulmuştur. Hi-fi kategorisine giren aletler
                kaydedilen sesi dinleyiciye aslından neredeyse farksız olarak
                aktarabilme özelliğine sahiptir.
@@ -77,7 +74,10 @@ tags= ["anasayfa", "dergi"]
       </strong>
    </p>
 
-   <p>
+  
+
+   <div class="row">
+      <div class="col-md-6"> <p>
       1930&#x27;lardan 1960&#x27;ların sonuna kadar Jukebox pazarında; eşzamanlı
       olarak doğan rekabet, hem gelişen müzik endüstrisi -özellikle kayıt- hem
       de halk arasında hızla artan müzik talebi nedeniyle oldukça hızlı bir
@@ -114,9 +114,6 @@ tags= ["anasayfa", "dergi"]
          Daha mütevazı bir meydan okuyucu. [1]
       </li>
    </ul>
-
-   <div class="row">
-      <div class="col-md-6">
          <p>
             1930-1950 döneminde dans eden çoğu insan bunu bir müzik kutusu
             tarafından sağlanan müzikle yaptı. Çok seçkin yerler dışında çoğu
@@ -188,7 +185,7 @@ tags= ["anasayfa", "dergi"]
             <em>juke</em>
             &#x27; kelimesi etimolojik olarak dans anlamına gelmesine rağmen
             argo sayılıyordu. Ancak
-            <em>&quot;jetonla çalışan otomatik fonograf&quot;</em>
+            <em>jetonla çalışan otomatik fonograf</em>
             dan ağza çok daha kısa geldiği için hemen benimsendi ve
             Afrikalı-Amerikalılar tarafından adlandırılmış oldu. [2]
          </p>
