--- a/content/dergi/sayi-5/liter-of-light/index.html
+++ b/content/dergi/sayi-5/liter-of-light/index.html
@@ -1,6 +1,7 @@
 +++
 title = "Umut Işığı: Liter of Light"
-description=""
+seotitle="Umut Işığı: Liter of Light Projesi"
+description="Elektrik olmadan yaşamını sürdüren birçok topluma umut ışığı olan 'Liter of Light' projesiyle tanışalım. Sayımızdan projenin hikayesini okuyabilirsiniz."
 url="sayi-5/liter-of-light"
 aciklama="21.Yüzyıl dünyasında temel ihtiyaçlar da dahil olmak üzere herkes eşit olanaklara sahip değil. Kimi coğrafyadaki bireyler için elektriğe ulaşmak hâlâ bir ayrıcalık sayılıyor. Dünyada bir milyara yakın insan doğal afetler ve ekonomik sebeplerle elektriğe hâlâ erişemiyor. Elektrik olmadan yaşamını sürdüren birçok topluma umut ışığı olan 'Liter of Light' projesiyle tanışalım."
 type="sayfa"
