--- a/content/dergi/sayi-5/minimalizm/index.html
+++ b/content/dergi/sayi-5/minimalizm/index.html
@@ -1,6 +1,6 @@
 +++
 title = "Minimalizm ve Sürdürülebilir Tasarım"
-description=""
+description="Minimalizm nedir? Minimalizm; bir düşünceyi, minimum sayıda renk, biçim, çizgi ve dokuya indirgeyerek vermeye çalışır. Sürdürülebilir tasarım ile ilişkisi."
 url="sayi-5/minimalizm-surdurulebilir-tasarim"
 aciklama="“Fakirlik, yoksunluk, eksiklik değildir minimalizm; aksine bilinçli bir tercihtir. Zor olanı seçmektir, azla çok yapmaktır.” -Mies van der Rohe"
 type="sayfa"
