--- a/content/dergi/sayi-5/shakers/index.html
+++ b/content/dergi/sayi-5/shakers/index.html
@@ -1,6 +1,7 @@
 +++
 title = "Yeryüzünde Cenneti Yaratma Arzusu: Shakers"
-description=""
+seotitle="Shakers Tasarımları - Yaşam Tarzı ve Tasarım Tarihi"
+description="Shaker’ların tüm estetik kavramı işleve dayandığından işlevsel olmayan biçim kesinlikle estetik sayılmamıştır. Biçim, işlevden türemiştir. Shaker tasarımları."
 url="sayi-5/shakers"
 aciklama="Shaker’ların tüm estetik kavramı işleve dayandığından işlevsel olmayan biçim kesinlikle estetik sayılmamıştır. Biçim, işlevden türemiştir. Yerleşmenin seçimi, yerleşmelerdeki yapıların konumu, yapıdaki odalar, odadaki pencereler, bölmeler ve diğer özelliklerin yeri yararlarına göre belirlenmiştir."
 type="sayfa"
