--- a/content/dergi/sayi-5/tasarimda-malzeme-karton/index.html
+++ b/content/dergi/sayi-5/tasarimda-malzeme-karton/index.html
@@ -1,6 +1,7 @@
 +++
 title = "Tasarımda Malzeme: Karton"
-description=""
+seotitle="Tasarımda Karton Malzeme Kullanımı - Örnekleri"
+description="Karton nasıl üretilir? Karton malzeme ile üretilmiş tasarımlar ve tasarımcıları. Cardboard ile yapılmış sandalye ve ürün tasarımları yeni sayımızda sizlerle."
 url="sayi-5/tasarimda-malzeme-karton"
 aciklama="Muhtemelen hepimiz gün içinde farkında olmadan kartondan yapılmış bir ürünü elimize alıyoruz. Peki ya kartonun ne olduğunu veya nasıl üretildiğini hiç düşündünüz mü?"
 type="sayfa"
@@ -12,8 +13,6 @@ yazar=["eylul ecem sogutlu"]
 tags= ["anasayfa", "dergi", "tasarimda malzeme"]
 +++
 <div class="container">
-
-
 	<p>
 		Muhtemelen hepimiz gün içinde farkında olmadan kartondan yapılmış bir ürünü
 		elimize alıyoruz. Peki ya kartonun ne olduğunu veya nasıl üretildiğini hiç
@@ -45,9 +44,6 @@ tags= ["anasayfa", "dergi", "tasarimda malzeme"]
 			</figure>
 		</div>
 	</div>
-
-
-
 
 	<p>
 		Kağıt hamuru yapma işleminin amacı, elyaf kaynağının yapısını pazar hamuruna
@@ -112,7 +108,7 @@ tags= ["anasayfa", "dergi", "tasarimda malzeme"]
 		olanaklarını yaratıcı bir şekilde yorumlamış tasarımcılara ve tasarımlarına
 		bir göz atalım.
 	</p>
-	<h1>Frank Gehry / Easy Edges Koleksiyonu</h1>
+	<h2>Frank Gehry / Easy Edges Koleksiyonu</h2>
 	<div class="row">
 		<div class="col-md-6">
 			<figure>
@@ -144,7 +140,7 @@ tags= ["anasayfa", "dergi", "tasarimda malzeme"]
 
 
 
-	<h1>WİGGLE Side Sandalye</h1>
+	<h2>WİGGLE Side Sandalye</h2>
 	<div class="row">
 		<div class="col-md-6">
 			<figure>
@@ -180,7 +176,7 @@ tags= ["anasayfa", "dergi", "tasarimda malzeme"]
 
 
 
-	<h1>CONTOUR Sandalye</h1>
+	<h2>CONTOUR Sandalye</h2>
 	<div class="row">
 		<div class="col-md-6">
 			<figure>
@@ -204,7 +200,7 @@ tags= ["anasayfa", "dergi", "tasarimda malzeme"]
 
 
 
-	<h1>R-bar Tabure</h1>
+	<h2>R-bar Tabure</h2>
 	<div class="row">
 		<div class="col-md-6">
 			<figure>
