--- a/content/dergi/sayi-6/bakalit/index.html
+++ b/content/dergi/sayi-6/bakalit/index.html
@@ -1,6 +1,7 @@
 +++
 title = "Plastiğin Doğuşu: Bakalit"
-description=""
+seotitle="Plastiğin Doğuşu: Bakalit Malzeme"
+description="Bakalit malzemeden yapılmış ürünler, tasarımlar. Bakalit plastiğin özellikleri nedir? Bakaliti bulan kişi kimyager Leo Baekeland. Tarih, malzemelerle değişir..."
 url="sayi-6/plastigin-dogusu-bakalit"
 aciklama="Tarih, geliştirdiğimiz ve kullandığımız malzemelerle şekillenir. Binlerce yıl araçlarını taştan yapan insanlar, bakır alaşımlarını öğrenerek Tunç Çağı'nı başlattı. Yüzyıllar sonra, süreci Demir Çağı devam ettirdi. 1907'de ise dünyanın ilk sentetik plastiği olan Bakalit, Polimer Çağı'nın başlangıcı oldu."
 type="sayfa"
@@ -11,8 +12,6 @@ sayfa="03"
 yazar=["zeynep yarar"]
 tags= ["anasayfa", "dergi", "tasarimda malzeme", "plastik"]
 +++
-
-
 
 <div class="container-fluid">
    <div class="row">
@@ -43,13 +42,13 @@ tags= ["anasayfa", "dergi", "tasarimda malzeme", "plastik"]
             dışkılarıyla yaptıkları doğal reçine &#39;gomalak&#39;tır.
          </p>
          <p>
-            20.yy başında çok fazla kullanılan gomalak, “tachardia lacca” adlı
+            20. yy başında çok fazla kullanılan gomalak, “tachardia lacca” adlı
             küçük bir böcekten elde ediliyordu. Koku engelleme gibi amaçlar için
             kullanılmasının yanında; sarı verniğin, mobilya cilasının ve günlük
             yaşamla ilgili daha birçok gereksinimin ana maddesiydi.
          </p>
          <p>
-            Yine 20.yy başlarında elektrik çağı başlayınca tüm kabloları
+            Yine 20. yy başlarında elektrik çağı başlayınca tüm kabloları
             kaplayacak yalıtkan madde krizi baş gösterdi. Böceklerin ürettiği
             gomalak yetersizdi. Buna istinaden söylenebilir ki; kimyagerleri
             plastik yapmak için teşvik eden asıl etken elektriğin icadıydı.
