--- a/content/dergi/sayi-6/dieter-rams/index.html
+++ b/content/dergi/sayi-6/dieter-rams/index.html
@@ -1,6 +1,7 @@
 +++
 title = "Dieter Rams ve Tasarım Felsefesi"
-description=""
+seotitle="Dieter Rams Kimdir? Tasarım İlkeleri ve Tasarımları"
+description="Dieter Rams, 1932 yılında Almanya'da doğdu. İyi tasarımın 10 ilkesiyle tanınmaktadır. Braun için tasarladığı ikonik tasarımlarını sayımızdan okuyabilirsiniz."
 url="sayi-6/dieter-rams-tasarim-felsefesi"
 aciklama="Kalbim ayrıntılarda saklıdır. Aslında ayrıntıları her zaman büyük resimden daha önemli buldum. Hiçbir şey ayrıntılar olmadan çalışmaz. Onlar her şeydir; kalitenin temelidir."
 type="sayfa"
