--- a/content/dergi/sayi-6/kitsch/index.html
+++ b/content/dergi/sayi-6/kitsch/index.html
@@ -1,7 +1,7 @@
 +++
 title = "Tasarım Sözlüğü: Kitsch"
-seotitle = "Tasarımda Kitsch Nedir?"
-description=""
+seotitle = "Tasarımda Kitsch Nedir? Örnek Tasarımlar"
+description="Kitsch (kiç) ile ilgili sayısız tanım olsa da, sanatın aşağı bir kopyasının üretilmesine verilen isimdir. Kitsch ürünler, tasarımlar ve sanatçıları sayımızda."
 url="sayi-6/tasarimda-kitsch-nedir"
 aciklama=" “Net ve katı tanımlar beklemeyin, aksi takdirde dersin sonunda pek çok sorunun yanıtsız kaldığını düşünürsünüz ki bu soruları ancak kitsch üzerine üç ciltlik bir çalışma yaparsam açıklayabilirim.” -Hermann Broch"
 type="sayfa"
