--- a/content/dergi/sayi-6/malzeme-seramik/index.html
+++ b/content/dergi/sayi-6/malzeme-seramik/index.html
@@ -1,6 +1,7 @@
 +++
 title = "Tasarımda Malzeme: Seramik"
-description=""
+seotitle="Seramik Tasarımları, Üretimi ve Tasarımcıları"
+description="Seramik günlük yaşantımızda sıklıkla ortaya çıkan bir ürün malzemesidir. Bu sayımızda ünlü seramik tasarımcılarına, tasarımlarına ve üretimine değindik."
 url="sayi-6/tasarimda-malzeme-seramik"
 aciklama="Seramik günlük yaşantımızda evimizin pek çok yerinde ortaya çıkan bir ürün malzemesi olmaktan kaçamıyor. Akşam yemeklerimizde tamamlayıcı bir görsel etki yaratan tabaklarımızda veya her gün suladığımız çiçeklerimizde dekoratif bir etki yaratan saksılarımızda seramiği sıkça görmek mümkün."
 type="sayfa"
