--- a/content/dergi/sayi-7/amerikan-ruyasi/index.html
+++ b/content/dergi/sayi-7/amerikan-ruyasi/index.html
@@ -1,6 +1,7 @@
 +++
 title = "Amerikan Rüyası"
-description=""
+seotitle="Amerikan Rüyası Tüketim Kültürü - Reklamcılık - Filmler"
+description="Amerikan rüyasında tüketim kültürü ve reklamcılıkla ürünlere olan etkisini bu sayımızda yer verdik. Ayrıca Amerikan rüyası filmlerini okuyabilirsiniz."
 url="sayi-7/amerikan-ruyasi/"
 aciklama="Amerikan Rüyası, nerede doğduğu veya hangi sınıfa ait olduğu fark etmeksizin herkesin toplumda kendi başarısını elde edebileceği inancıdır. Amerikan Rüyası, özgürlük ve eşitlik vaat eder. Kişinin hayatını etkileyen kararları alabilmesi, daha iyi şeylere talip olma ve bunları elde etme imkânı, zenginlik ve şöhret, onurlu bir yaşam sürme fırsatı sunar... Ancak tüm bunların yalnızca çok çalışma ve kararlılık ile elde edilebileceğini söyler."
 type="sayfa"
