--- a/content/dergi/sayi-7/futurizm/index.html
+++ b/content/dergi/sayi-7/futurizm/index.html
@@ -1,6 +1,6 @@
 +++
 title = "Fütürizm Akımı: Öncüleri ve Etkileri"
-description=""
+description="Fütürizm akımı öncüleri, resim, heykel ve mimarisi. Fütürist sanatçılar ve fütürist edebiyat. Fütürizm yani gelecekçilik manifestosunu yazan kişi Marinetti."
 url="sayi-7/futurizm-akimi/"
 aciklama="Yüzyılın başlarında İtalyada ortaya çıkan ve 19. Yüzyıl Romantizminin yükünden kurtulup endüstrileşme ile nükseden makine, hız, enerji, teknoloji, gürültü, şiddet, gençlik, endüstri, kaos gibi kavramları yücelten sanatsal ve sosyal hareket."
 type="sayfa"
