--- a/content/dergi/sayi-7/ikonik-koltuklar/index.html
+++ b/content/dergi/sayi-7/ikonik-koltuklar/index.html
@@ -1,6 +1,7 @@
 +++
 title = "İkonik Tasarımlar: Koltuk"
-description=""
+seotitle="İkonik Koltuk Tasarımları - 6 Koltuk Modeli"
+description="Bu sayımızda 6 adet ikonikleşmiş olan koltuk tasarımını inceliyoruz. Alvar Aaltonun Paimio koltuğu, Swan chair, Up Armchair, Bocca Sofa ve Sacco Armchair."
 url="sayi-7/ikonik-tasarimlar-koltuk/"
 aciklama="Bazıları müzelerden müzelere gezdi, bazıları hastalar için velinimetti, bazıları da konserde sanatçıyla birlikte sahnedeydi. Rahatlıklarının yanında görsellikleriyle de bizleri yıllardır etkisi altına alıp bir çok dergiye kapak olan bu ikonik koltuk tasarımları şimdi Markut'ta :)"
 type="sayfa"
