--- a/content/dergi/sayi-7/katalin-malzeme/index.html
+++ b/content/dergi/sayi-7/katalin-malzeme/index.html
@@ -1,6 +1,7 @@
 +++
 title = "Bakalit Akabinde Katalin"
-description=""
+seotitle="Plastik Malzeme: Katalin - Üretimi ve Tarihi"
+description="1927 yılında Katalin, malzemenin bulunmasıyla renk değişim problemine çare bulundu ve Bakelite rakip olarak Katalin Malzeme üretimi başladı. Misveki tesbih..."
 url="sayi-7/plastik-malzeme-katalin/"
 aciklama="Bakalit son derece yenilikçiydi ve pek çok Art Deco tasarımda 1920&#39;lerin sonlarından itibaren kullandı. En çok siyah, kahverengi ve kırmızı renklerde üretilmesinin yanında yakut yeşili, turkuaz gibi özel siparişleri de karşıladı."
 type="sayfa"
