--- a/content/dergi/sayi-7/tasarim-sozlugu-persona/index.html
+++ b/content/dergi/sayi-7/tasarim-sozlugu-persona/index.html
@@ -1,6 +1,7 @@
 +++
 title = "Tasarım Sözlüğü: Persona"
-description=""
+seotitle="Persona Nedir? Nasıl Oluşturulur? "
+description="Personalar tasarım problemlerinin tanımlanması ve problemlere çözüm tasarlayabilmek amacıyla yapılır. Persona nedir ve örnekleri? Neden ve nasıl oluşturulur?"
 url="sayi-7/tasarimda-persona-nedir"
 aciklama="Personalar tasarım problemlerinin tanımlanması ve problemlere çözüm tasarlayabilmek amacı ile - sorunu yaşayan kullanıcıların bulguları ışığında- ideal müşteri tipinin kurgusal karakteridir."
 type="sayfa"
