--- a/content/dergi/sayi-7/tatbiki-marmara-gsf/index.html
+++ b/content/dergi/sayi-7/tatbiki-marmara-gsf/index.html
@@ -1,6 +1,6 @@
 +++
 title = "Tatbiki'den Marmara GSF'ye"
-description=""
+description="Tatbiki Güzel Sanatlar Yüksek Okulu tarihi. Marmara Güzel Sanatlar Fakültesine geçişi. Eğitim sistemi, atölyeleri ve kuruluşu hakkında bilgiler."
 url="sayi-7/tatbiki-marmara-gsf"
 aciklama="1950’li yıllarda endüstri ve endüstrileşme hızının artmasıyla Türkiye’de de Bauhaus ilkeleri doğrultusunda kurulan bir okula ihtiyaç duyulmaya başlanmıştır. Bu ihtiyacın giderilmesi için ortaya çıkan ilk kurum Tatbiki Güzel Sanatlar Yüksek Okuludur."
 type="sayfa"
