--- a/content/dergi/sayi-8/cin-paket-servis-kabi/index.html
+++ b/content/dergi/sayi-8/cin-paket-servis-kabi/index.html
@@ -1,6 +1,7 @@
 +++
 title = "İkonik Tasarımlar: Çin Paket Servis Kabı"
-description=""
+seotitle="İkonik Tasarımlar: Çin Paket Servis Kabı Oyster Pail"
+description="Tek kullanımlık gıda kapları söz konusu olmuşken de bu konuda Çin paket servis kabı kadar ikonik bir şey yoktur. Bu ambalaj ayrıca Oyster Pail olarak geçmekte."
 url="sayi-8/ikonik-tasarim-oyster-pail"
 aciklama="Pandemiyle birlikte artan gel-al paket servisi, tek kullanımlık servis paketlerine ihtiyacı oldukça arttırdı ve paket serviste restoranların yemekleri muhafaza etmek için kullandıkları tek kullanımlık kaplarda da iyileştirmeye gidilmesine başlandı. Tek kullanımlık gıda kapları söz konusu olmuşken de bu konuda Çin paket servis kabı kadar ikonik bir şey yoktur."
 type="sayfa"
