--- a/content/dergi/sayi-8/futurizm/index.html
+++ b/content/dergi/sayi-8/futurizm/index.html
@@ -1,6 +1,7 @@
 +++
 title = "Fütüristik Tasarımlar"
-description=""
+seotitle="Fütüristik Tasarımlar - 6 Fütüristik Tasarım"
+description="Tasarımcılar olarak geleceği şekillendirme gücüne sahibiz. Bu sayımızda ürün ve mimari bağlamında 6 fütüristik tasarıma değindik. Daha iyi bir ürün..."
 url="sayi-8/futuristik-tasarimlar"
 aciklama="Gelecek birçok olasılığı, bilinmezliği içinde barındırır. Gelecekte ne olacağı, nasıl bir dünyada olacağımız merak konusudur. Otonom araçlar, yapay zeka teknolojilerinin gelişmesi -belki evrimi-, nanoteknolojinin gelişmesi, dronların kullanımının artması, daha sofistike androidlerin üretilmesi, dünya dışı gezegenlerden yeni ev(ler)imiz Dünya-02 ve belki de uzaylı dostlarımız(?)..."
 type="sayfa"
