--- a/content/dergi/sayi-8/metal-levha/index.html
+++ b/content/dergi/sayi-8/metal-levha/index.html
@@ -1,6 +1,7 @@
 +++
 title = "Tasarımda Malzeme: Metal Levhalar"
-description=""
+seotitle="Metal Levhaların Tasarımda Kullanımı ve Üretimi"
+description="Metal levhalar, bir diğer adıyla sac metal, endüstriyel işlemle; ince, düz parçalara dönüştürülen metaldir. Sayısız günlük nesne sac metalden üretilir."
 url="sayi-8/tasarimda-metal-sac-levhalar"
 aciklama="Bir diğer adıyla sac metal, endüstriyel işlemle; ince, düz parçalara dönüştürülen metaldir. Sac, metalin kullanılan temel biçimlerinden biridir. Sayısız günlük nesne sac metalden üretilir."
 type="sayfa"
