--- a/content/dergi/sayi-8/tarim-tasarim/index.html
+++ b/content/dergi/sayi-8/tarim-tasarim/index.html
@@ -1,6 +1,7 @@
 +++
 title = "Tarım ve Tasarım"
-description=""
+seotitle="Traktörün Tasarım Tarihi Tarım ve Tasarım"
+description="Binlerce yıl tarım ve çiftçilik, insan ve hayvan gücüyle işledi. 19. yüzyıla gelindiğinde traktör ile tarımın da seyri değişti. Traktör tasarımının tarihi."
 url="sayi-8/tarim-traktor-tasarim"
 aciklama="Binlerce yıl tarım ve çiftçilik, insan ve hayvan gücüyle işledi. Ancak 19. yüzyıla gelindiğinde tarımın da seyri değişti. Gelişen alet ve makineler yeni bir çağı başlatırken gıdayı tarladan sofraya getiren traktörler, hayatı kolaylaştırdı... Sadece insan hayatını da değil..."
 type="sayfa"
