--- a/content/dergi/sayi-9/benzin-istasyonlari/index.html
+++ b/content/dergi/sayi-9/benzin-istasyonlari/index.html
@@ -1,6 +1,7 @@
 +++
 title = "Tasarım Tarihi: Benzin İstasyonları"
-description=""
+seotitle="Tasarım Tarihi: Benzin İstasyonları Tasarımları"
+description="Benzin istasyonları tarih boyunca temel sütun, çatı ve dükkan tasarımının çok ötesinde oldular. Tarihinin en iyi benzin istasyonlarını sizler için derledik."
 url="sayi-9/benzin-istasyonu-tasarimlari"
 aciklama="Benzin istasyonları çoğumuz için sıkıcı yerlerdir ancak çoğunlukla uzun bir yolculukta uğramaktan kaçınamazsınız. Bununla birlikte, istasyonlar tarih boyunca temel sütun, çatı ve dükkan tasarımının çok ötesinde oldular. Tarihinin en iyi Art Deco, Bauhaus, fütürist, minimalist, modernist bina tasarımlarından bazılarını sergileyen, neredeyse bir yüzyıllık ilerlemeyi görebileceğimiz istasyonlar mümkün."
 type="sayfa"
