--- a/content/dergi/sayi-9/ihap-hulusi-gorey/index.html
+++ b/content/dergi/sayi-9/ihap-hulusi-gorey/index.html
@@ -1,6 +1,7 @@
 +++
 title = "İhap Hulusi Görey"
-description=""
+seotitle="İhap Hulusi Görey Hayatı ve Tasarımları"
+description="Uluslararası ilk Türk grafiker. İhap Hulusi Görey, yeni kurulmuş bir devletin ilk uzman tasarımcısı olarak tanınır. Hayatı, afiş, reklam ve logo tasarımları."
 url="sayi-9/ihap-hulusi-gorey"
 aciklama="Uluslararası ilk Türk grafiker.. Beyoğlu sokaklarında lakabı: 'Şaheser'.. Genç cumhuriyeti afişleyen birey.. Üstad: İhap Hulusi Görey.. Çoğu taşbaskısı olan yüzlerce çalışması ile 50 yıllık bir dönemin endüstri, kalkınma, ticaret ve sosyal yaşamın gelişmelerini belgeledi. İhap Hulusi Görey, yeni kurulmuş bir devletin ilk uzman tasarımcısı olarak tanınır."
 type="sayfa"
