--- a/content/dergi/sayi-9/mikroplastikler/index.html
+++ b/content/dergi/sayi-9/mikroplastikler/index.html
@@ -1,6 +1,7 @@
 +++
 title = "Plastik Çağı: Mikroplastiklere Genel Bakış"
-description=""
+seotitle="Mikroplastikler Nedir? Hayatımızı Nasıl Etkiliyor?"
+description="Mikroplastik Nedir? Mikroplastikler 5 mm ile 1 mikrometre arasındaki boyutlarda olan plastiklere verilen isimdir. Gıdalardaki mikroplastikler etkileri."
 url="sayi-9/plastik-cagi-mikroplastikler"
 aciklama="Teknolojinin gelişmesi, yeni buluşlar ve küreselleşme ile birlikte birçok yenilik hayatımıza girdi. Peki, bu hızlı gelişmeler dünyanın ekosistemini nasıl etkiledi? Hızlı tüketim ve buna katkı sağlayan birçok faktör dünyamıza çevre kirliliği olarak geri döndü. 1950’li yıllarda başlayan plastik kullanımı her alanda kolaylıkla kullanım ve ucuza mal edilme gibi nedenlerle günümüz plastik çağ olarak adlandırılmaya başladı."
 type="sayfa"
