--- a/content/dergi/sayi-9/pop-art/index.html
+++ b/content/dergi/sayi-9/pop-art/index.html
@@ -1,6 +1,7 @@
 +++
 title = "Pop Art Sanat Akımı"
-description=""
+seotitle="Pop Art Sanat Akımı Öncüleri ve Etkileri"
+description="Pop Art, 1950'li yıllarda ortaya çıkmış ve başta Amerika olmak üzere dünyayı etkisi altına almış sanat akımıdır. Sanatçıları: Andy Warhol, Richard Hamilton..."
 url="sayi-9/pop-art-sanat-akimi"
 aciklama="Pop Art, 1950'li yıllarda ortaya çıkmış ve başta Amerika olmak üzere tüm dünyayı etkisi altına almış bir sanat akımıdır. Aynı yıllarda Amerikalılar, topluma bir rüya adı altında tüketim üzerine kurulu bir yaşam tarzı sunmaktadır. Toplumda etkisini giderek arttıran yeni tüketim dünyası Pop Art akımının ortaya çıkmasına neden olmuştur."
 type="sayfa"
@@ -379,8 +380,8 @@ tags= ["ana sayfa", "dergi", "sanat akimi"]
       <div class="col-md-6">
          <p>
             Sanatçının çığır açan eseri olarak değerlendirilen &#39;&#39;<strong
-               >*Başkan Seçilmiş</strong
-            >&#39;&#39;* Rosenquist&#39;in reklam yoluyla bilinçaltı ikna
+               >Başkan Seçilmiş</strong
+            >&#39;&#39; Rosenquist&#39;in reklam yoluyla bilinçaltı ikna
             konusundaki hayranlığından bahsediyor. Rosenquist, reklam
             görüntülerine güçlü bir ilgi duyup gücünü sanat eserine dönüştürmek
             istedi. Sanatçı, &quot;<em
