--- a/content/dergi/sayi-9/tasarim-sozlugu-kolaj/index.html
+++ b/content/dergi/sayi-9/tasarim-sozlugu-kolaj/index.html
@@ -1,6 +1,7 @@
 +++
 title = "Tasarım Sözlüğü: Kolaj"
-description=""
+seotitle="Kolaj Nedir? Nasıl Yapılır?"
+description="Kolaj, elde mevcut her tür basılı, çizili ya da fotografik malzemenin bir yüzey üzerine yeni bir kompozisyon oluşturacak düzende yapıştırılmasıyla elde edilir."
 url="sayi-9/tasarim-sozlugu-kolaj"
 aciklama="Elde mevcut her tür basılı, çizili ya da fotografik malzemenin bir yüzey üzerine yeni bir kompozisyon oluşturacak düzende yapıştırılmasıyla elde edilir. Böylelikle kendileri sanatsal nitelikte olmayan çeşitli malzemeler, yalnızca yeni bir kompozisyon oluşturmak için kullanımları sayesinde bir sanat yapıtı meydana getirirler. Bu durumda sanatsal üretim süreci sadece bir kompoze etme etkinliğine indirgenmiş olur."
 type="sayfa"
