--- a/content/dergi/sayi-10/sozluk-mockup/index.html
+++ b/content/dergi/sayi-10/sozluk-mockup/index.html
@@ -1,7 +1,7 @@
 +++
 title = "Tasarım Sözlüğü: Mock-up"
 seotitle="Mock-up Nedir? Örnek Çalışmalar"
-description=""
+description="Mock-up, İngilizcedir. Türkçe'de model-maket anlamına gelmektedir. Mockup, nihai ürün hakkında genel fikri vermek için kullanılır, çalışan bir model değildir."
 url="sayi-10/mockup-nedir"
 aciklama="Mock-up sözcüğü, İngilizce bir kelime olup Türkçe'de model-maket anlamına gelmektedir. Mock-uplar belirli bir tasarımın tüm açılardan nasıl görüneceğini yansıtmak için yapılır ve kullanılır. Ürün maketleri, nihai bir ürün hakkında genel fikri iletmek amacıyla gerçek yaşam bağlamında sunmak için kullanılır, çalışan bir model değildir."
 type="sayfa"
