--- a/content/dergi/sayi-4/sayi-4-sumerbank.html
+++ b/content/dergi/sayi-4/sayi-4-sumerbank.html
@@ -3,7 +3,7 @@ title = "Sümerbank \"Fabrika-Yatırım-Ekonomi-Tasarım\""
 url = "sayi-4/sumerbank-fabrika-yatirim-ekonomi-tasarim/"
 date = "2020-12-01"
 seotitle = "Sümerbank \"Fabrika-Yatırım-Ekonomi-Tasarım\""
-description=""
+description="Sümerbank Nedir? Sanayi; toplumu şekillendirme, tarihi değiştirme gücüne sahip. Sümerbank, fabrikaları, tasarımları ve ürünleriyle modernleşme hamlesi oldu."
 aciklama="Antik uygarlıkların beşiği Anadolu'nun eşsiz desen hafızası, tüm özgün renkleri ve dokularıyla Sümerbank kumaşlarında yerini aldı. Geriye hâlâ hafızalardan silinmeyen Merinos kumaşları, Nazilli basmaları, Hereke dokumaları kaldı."
 thumb="/img/sumerbank-thumnail.jpg"
 sayi=[
