--- a/content/dergi/sayi-6/bic-cristal/index.html
+++ b/content/dergi/sayi-6/bic-cristal/index.html
@@ -1,6 +1,7 @@
 +++
 title = "Değişmeyen Tek Şey: Bic Cristal Pen"
-description=""
+seotitle="Bic Cristal Pen Tasarım Tarihi"
+description="BIC Cristal model tükenmez kalemi görmeyenimiz ya da kullanmayanımız yoktur. Tasarımıyla ikonikleşen bu kalemin hikayesi yeni sayımızda sizlerle."
 url="sayi-6/ikonik-tasarimlar-tukenmez-kalem-bic-cristal"
 aciklama="BIC Cristal model tükenmez kalemi görmeyenimiz ya da kullanmayanımız yoktur. Gündelik yaşamın ayrılmaz bir parçası olmuştur bu tükenmez kalem. Peki bu kadar göz önündeki bir kalemin bir tasarım klasiği olduğunu farkında mıyız?"
 type="sayfa"
